--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "{{cookiecutter.app_slug}}",
+    "name": "{{cookiecutter.project_slug}}",
     "version": "1.0.0",
-    "description": "{{cookiecutter.description}}",
+    "description": "{{cookiecutter.project_description}}",
     "main": "src/index.js",
     "scripts": {
         "start": "react-scripts start",
@@ -9,7 +9,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-    "author": "{{cookiecutter.author}}",
+    "author": "{{cookiecutter.project_owner}}",
     "license": "MIT",
     "dependencies": {
         "react": "^17.0.2",
